--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
   "name": "@terrahq/reveal-it",
   "private": false,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.esm.js",
+  "browser": "./dist/reveal-it.umd.js",
   "exports": {
-    ".": "./src/js/RevealIt.js"
+    ".": {
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.cjs.js",
+      "default": "./dist/reveal-it.umd.js"
+    }
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "rollup -c",
+    "preview": "vite preview",
+    "build:umd": "rollup -c rollup.config.umd.js"
   },
   "devDependencies": {
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@types/node": "^20.8.5",
+    "rollup": "^2.60.0",
+    "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.69.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
@@ -20,6 +33,9 @@
   "dependencies": {
     "@andresclua/jsutil": "^3.0.16",
     "@teamthunderfoot/breakpoints": "^0.0.83",
+    "gsap": "^3.12.5"
+  },
+  "peerDependencies": {
     "gsap": "^3.12.5"
   }
 }
