--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@terrahq/reveal-it",
   "private": false,
-  "version": "1.0.8",
+  "version": "1.0.14",
   "type": "module",
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.esm.js",
@@ -19,7 +19,7 @@
   ],  
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && rollup -c",
+    "build": "vite build",
     "preview": "vite preview",
     "build:umd": "rollup -c rollup.config.umd.js"
   },
